--- a/index.html
+++ b/index.html
@@ -6,8 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jornada Viagens</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="shortcut icon" href="favico.png" type="image/x-icon">
 </head>
 
-<body></body>
+<body>
+    <header>
+        <a href="#"><img src="assets/Header-e-rodapes/Simbolo_white.png"
+                alt="logo da empresa de viagens jornada viagens"></a>
+        <img src="assets/Header-e-rodapes/menu.png" alt="">
+        <nav>
+            <a href="#">Blog</a>
+            <a href="#">Pacotes de viagem</a>
+            <a href="#">Contato</a>
+        </nav>
+    </header>
+</body>
 
 </html>
