--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 
 <body>
     <header>
-        <a href="#"><img src="assets/Header-e-rodapes/Simbolo_white.png"
+        <a href="index.html" title="voltar para a página inicial"><img src="assets/Header-e-rodapes/Simbolo_white.png"
                 alt="logo da empresa de viagens jornada viagens"></a>
         <img src="assets/Header-e-rodapes/menu.png" alt="">
         <nav>
-            <a href="#">Blog</a>
-            <a href="#">Pacotes de viagem</a>
-            <a href="#">Contato</a>
+            <ul>
+                <li><a href="blog.html" title="Acessar o blog">Blog</a></li>
+                <li><a href="pacotes.html" title="Acessar pacotes de viagem">Pacotes de viagem</a></li>
+                <li><a href="contato.html" title="Acessar contato">Contato</a></li>
+            </ul>
         </nav>
     </header>
 </body>
