adicionando estilos ao header

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <header>
-        <a href="index.html" title="voltar para a página inicial"><img src="assets/Header-e-rodapes/Simbolo_white.png"
-                alt="logo da empresa de viagens jornada viagens"></a>
+        <a href="index.html" title="voltar para a página inicial" class="logo"><img
+                src="assets/Header-e-rodapes/Simbolo_white.png" alt="logo da empresa de viagens jornada viagens"></a>
         <img src="assets/Header-e-rodapes/menu.png" alt="">
         <nav>
             <ul>
