--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
     <header>
         <a href="index.html" title="voltar para a página inicial" class="logo"><img
                 src="assets/Header-e-rodapes/Simbolo_white.png" alt="logo da empresa de viagens jornada viagens"></a>
-        <img src="assets/Header-e-rodapes/menu.png" alt="">
-        <nav>
-            <ul>
-                <li><a href="blog.html" title="Acessar o blog">Blog</a></li>
-                <li><a href="pacotes.html" title="Acessar pacotes de viagem">Pacotes de viagem</a></li>
-                <li><a href="contato.html" title="Acessar contato">Contato</a></li>
-            </ul>
-        </nav>
+        <div class="navigation-menu">
+            <img src="assets/Header-e-rodapes/menu.png" alt="">
+            <nav>
+                <ul>
+                    <li><a href="blog.html" title="Acessar o blog">Blog</a></li>
+                    <li><a href="pacotes.html" title="Acessar pacotes de viagem">Pacotes de viagem</a></li>
+                    <li><a href="contato.html" title="Acessar contato">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 </body>
 
